--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,13 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
-      - name: Build step
-        uses: denoland/deployctl@v1
+      - name: Setup Deno
+        uses: denoland/setup-deno@v2
         with:
-          project: "deep-pike-64"
-          entrypoint: "lib/build.ts"
-          root: "." 
+          deno-version: 1.35.0
+
+      - name: Build
+        run: deno run build
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
