--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -23,4 +23,4 @@ jobs:
         run: npm install -g @lhci/cli@0.12.x
 
       - name: Run Lighthouse
-        run: URL=$URL lhci autorun"
+        run: URL=$URL lhci autorun
