--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,12 @@
 name: Deploy
+
 on:
   push:
-    branches: main
+    branches:
+      - main
   pull_request:
-    branches: main
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -28,6 +31,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "deep-pike-64"
-          entrypoint: "lib/start.ts"
-          root: "." 
+          project: 'deep-pike-64'
+          entrypoint: 'lib/start.ts'
+          root: '.'
