--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy site to Cloudflare Pages
 
 on:
   push:
@@ -7,28 +7,25 @@ on:
     branches: [main]
 
 jobs:
-  deploy:
-    name: Deploy
+  deploy-main:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
 
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
+      - name: Use Node.js
+        uses: actions/setup-node@v1
         with:
-          deno-version: 1.35.0
+          node-version: 12.x
+      - run: yarn install --frozen-lockfile
+      - run: yarn export
 
-      - name: Build
-        run: deno task build
-
-      - name: Upload to Deno Deploy
-        uses: denoland/deployctl@v1
-        with:
-          project: 'fnhipster'
-          entrypoint: 'lib/start.ts'
-          root: '.'
+      - name: Publish to Cloudflare Workers Sites
+        run: |
+          mkdir -p ~/.wrangler/config/
+          echo "api_token=\"${CF_API_TOKEN}\"" > ~/.wrangler/config/default.toml
+          yarn wrangler publish --env production
+        env:
+          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+          CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
+          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
