--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - run: npm install -g wrangler
+      - run: yarn add wrangler --global
       # - run: yarn export
 
       - name: Publish to Cloudflare Workers Sites
