--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
-      - run: yarn add wrangler --global
-      # - run: yarn export
 
       - name: Publish to Cloudflare Workers Sites
         run: |
+          yarn add wrangler --global
           mkdir -p ~/.wrangler/config/
           echo "api_token=\"${CF_API_TOKEN}\"" > ~/.wrangler/config/default.toml
           wrangler publish --env production
