--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,50 @@
 name: Deploy site to Cloudflare Pages
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push]
 
 jobs:
   deploy-main:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
 
+    name: Publish to Cloudflare Pages
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      # - name: Use Node.js
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: 16.x
+
+      # - name: Publish to Cloudflare Workers Sites
+      #   run: |
+      #     yarn add wrangler --global
+      #     mkdir -p ~/.wrangler/config/
+      #     echo "api_token=\"${CF_API_TOKEN}\"" > ~/.wrangler/config/default.toml
+      #     wrangler publish --env production
+      #   env:
+      #     CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+      #     CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
+      #     CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+
+      # Run a build step here if your project requires
+
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
         with:
-          node-version: 16.x
-
-      - name: Publish to Cloudflare Workers Sites
-        run: |
-          yarn add wrangler --global
-          mkdir -p ~/.wrangler/config/
-          echo "api_token=\"${CF_API_TOKEN}\"" > ~/.wrangler/config/default.toml
-          wrangler publish --env production
-        env:
-          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-          CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
-          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          projectName: fnhipster
+          directory: YOUR_BUILD_OUTPUT_DIRECTORY
+          # Optional: Enable this if you want to have GitHub Deployments triggered
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          # Optional: Switch what branch you are publishing to.
+          # By default this will be the branch which triggered this workflow
+          # branch: main
+          # Optional: Change the working directory
+          workingDirectory: dist/public
+          # Optional: Change the Wrangler version, allows you to point to a specific version or a tag such as `beta`
+          wranglerVersion: '3'
