--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,10 @@ jobs:
       #     mkdir -p ~/.wrangler/config/
       #     echo "api_token=\"${CF_API_TOKEN}\"" > ~/.wrangler/config/default.toml
       #     wrangler publish --env production
-      #   env:
-      #     CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-      #     CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
-      #     CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+      # env:
+      #   CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+      #   CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
+      #   CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
 
       # Run a build step here if your project requires
 
@@ -37,14 +37,14 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          projectName: fnhipster
-          directory: YOUR_BUILD_OUTPUT_DIRECTORY
+          projectName: fnhipster.com
+          directory: dist/public
           # Optional: Enable this if you want to have GitHub Deployments triggered
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           # Optional: Switch what branch you are publishing to.
           # By default this will be the branch which triggered this workflow
           # branch: main
           # Optional: Change the working directory
-          workingDirectory: dist/public
+          # workingDirectory: fnhipster
           # Optional: Change the Wrangler version, allows you to point to a specific version or a tag such as `beta`
           wranglerVersion: '3'
