--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           deno-version: 1.35.0
 
       - name: Build
-        run: deno task build
+        run: ls .mdly && deno task build
         env:
           SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
           SPOTIFY_CLIENT_SECRET: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
@@ -34,6 +34,3 @@ jobs:
         with:
           project: 'fnhipster'
           entrypoint: 'lib/start.ts'
-          root: ${{ env.WORKSPACE }}
-        env:
-          WORKSPACE: ${{ github.workspace }}
