--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
+      - name: Restore Timestamps
+        uses: chetan/git-restore-mtime-action@v1
+
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
