--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
+      # Needed to restore timestamps use for caching mechanisms
       - name: Restore Timestamps
         uses: chetan/git-restore-mtime-action@v1
 
